Fix z-index

--- a/wp-content/themes/html5blank-stable/style.scss
+++ b/wp-content/themes/html5blank-stable/style.scss
@@ -58,7 +58,7 @@ $nav-width: 156px;
 /*******BASIC STYLES*******/
 
 *{
-    box-sizing: border-box;
+    //box-sizing: border-box;
 }
 
 footer,
@@ -130,6 +130,7 @@ body::-webkit-scrollbar {
     transform-origin: 0;
     background-color: transparent;
     transition: 0s ease;
+    z-index: 10;
     &.navBlack{
         background-color: #000!important;
         transition: 0s ease;
@@ -475,10 +476,10 @@ li {
     visibility: hidden;
     opacity: 0;
     transition: 0s ease;
-    z-index: 10;
+    z-index: 9;
     height: 100vh;
     width: 100vw;
-    margin-top: 14vh;
+    margin-top: 15vh;
     background-color: #000000;
     position: fixed;
     top: 0;
